--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 <body>
 
-<!-- Preloader Section -->
-<div id="preloader">
-    <div class="loader"></div>
-    <p id="preloader-text">Loading...</p>
-  </div>
+    <!-- Preloader Section -->
+    <div id="preloader">
+        <div class="loader"></div>
+        <p id="preloader-text">Loading...</p>
+    </div>
 
     <header>
         <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
@@ -125,80 +125,50 @@
             </div>
             <div class="row pw-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
+                    data-year="2025">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/EiaJAoM.png" alt>
-                        <div class="hover-content">
+                        <img src="https://i.imgur.com/rBAx6Yy.png" alt>
+                        <div class="hover-content-blog">
                             <h4>EICW - Implementation Brainstorming</h4>
                             <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
+                    data-year="2024">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/5I39ojc.png" alt>
-                        <div class="hover-content">
+                        <img src="https://i.imgur.com/iRDMx37.png" alt="tdc-v3">
+                        <div class="hover-content-blog">
                             <h4>Train Delays Checker V3</h4>
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/5I39ojc.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="900ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
+                    data-year="2022">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/wDvqKp1.png" alt>
-                        <div class="hover-content">
+                        <img src="https://i.imgur.com/mrtK74Z.png" alt="bus-rep">
+                        <div class="hover-content-blog">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="1100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/2ZDDWFy.png" alt>
-                        <div class="hover-content">
-                            <h4>MyTransport.SG App Redesign</h4>
-                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/GlYFYka.png" alt="man-a22-mascot">
-                        <div class="hover-content">
-                            <h4>MAN A22 Lion Mascot Replication</h4>
-                            <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/GlYFYka.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/kstN8gT.png" alt>
-                        <div class="hover-content">
-                            <h4>How To Use TimeTree Infographic</h4>
-                            <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
+                        <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
+                        <div class="hover-content-blog">
+                            <h4>LTA Bus Stop Pole Design Refresh</h4>
+                            <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -345,24 +315,24 @@
         </div>
     </footer>
 
-        <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-            data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
-            data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-            </script>
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+        data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
+        </script>
 
-        <script src="js/theme-index.js"></script>
+    <script src="js/theme-index.js"></script>
 
-        <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
-        <script src="js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
 
-        <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-        <script src="js/pw.bundle.js"></script>
+    <script src="js/pw.bundle.js"></script>
 
-        <script src="js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
-        <script src="js/preloader.js"></script>
+    <script src="js/preloader.js"></script>
 
 
 </body>
