--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/glightbox.min.css">
 
-  <script src="js/preloader.js"></script>
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -198,12 +198,10 @@
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/LBGqE6A.png" alt="man-a22-mascot">
+              <div class="hover-content-blog">
                 <h4>MAN A22 Lion Mascot Replication</h4>
-                <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -211,12 +209,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/JUvj9AL.png" alt="myts-app">
+              <div class="hover-content-blog">
                 <h4>MyTransport.SG App Redesign</h4>
-                <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -225,12 +221,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2022">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/mrtK74Z.png" alt="bus-rep">
+              <div class="hover-content-blog">
                 <h4>Bus Replications</h4>
-                <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -238,12 +232,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/59TyNel.png" alt="time-tree">
+              <div class="hover-content-blog">
                 <h4>How To Use TimeTree Infographic</h4>
-                <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -251,12 +243,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/homh9Ja.png" alt="more-rep">
+              <div class="hover-content-blog">
                 <h4>More Replications</h4>
-                <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/7e69TyC.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -264,12 +254,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/c0Ui8nR.png" alt="mrt-sign-s1">
+              <div class="hover-content-blog">
                 <h4>MRT Signages Concept/Replications S1</h4>
-                <a class="info" href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/9ynFmuE.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -277,12 +265,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/FRqxXUy.png" alt="mrt-sign-s2">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/jd1xmMH.png" alt="mrt-sign-s2">
+              <div class="hover-content-blog">
                 <h4>MRT Signages Concept/Replications S2</h4>
-                <a class="info" href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/FRqxXUy.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -290,12 +276,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2022">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/l1H7ojG.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>Hydration Regime Infographic</h4>
-                <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/4DBfqCK.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -303,12 +287,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/fepgW5P.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/c6T9wC5.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>EZ-Link Card Redesign</h4>
-                <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/fepgW5P.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -316,12 +298,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2020">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/5uss3c8.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/LSNcrrn.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>Food Review Compiler/Flashify - a Flashcard App</h4>
-                <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/5uss3c8.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
