--- a/about.html
+++ b/about.html
@@ -70,41 +70,43 @@
                     <div class="main-title">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
-                                </li>
-                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
-                                        About
-                                    </a>
-                                </li>
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a></li>
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> About</a></li>
                             </ol>
                         </nav>
                         <h1>About Me</h1>
                     </div>
                 </div>
-
-
             </div>
-
-            <div class="container">
-                <div class="portfolio-controls">
-                    <!-- Filter Buttons -->
-                    <div class="portfolio-filter">
-                        <a href="#summary">
-                            <button class="btn">Summary</button>
-                        </a>
-                        <a href="#tm">
-                            <button class="btn">Timelines & Milestones</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">Language Proficiency</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">Programming Languages</button>
-                        </a>
+        
+            <!-- Toggle Button for Mobile -->
+            <div class="container text-center">
+                <button class="btn btn-primary mb-3 toggle-btn d-md-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsible-content" aria-expanded="false" aria-controls="collapsible-content">
+                    Toggle Content
+                </button>
+        
+                <!-- Collapsible Content -->
+                <div class="collapse show d-md-block" id="collapsible-content">
+                    <div class="portfolio-controls">
+                        <!-- Filter Buttons -->
+                        <div class="portfolio-filter">
+                            <a href="#summary">
+                                <button class="btn">Summary</button>
+                            </a>
+                            <a href="#tm">
+                                <button class="btn">Timelines & Milestones</button>
+                            </a>
+                            <a href="#lppl">
+                                <button class="btn">Language Proficiency</button>
+                            </a>
+                            <a href="#lppl">
+                                <button class="btn">Programming Languages</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
