--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -184,7 +184,7 @@
             </div>
           </div>
 
-          <!-- Bus Route Diagrams Signages -->
+          <!-- User Interfaces - LCD Screens -->
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
@@ -195,7 +195,7 @@
                 navigate and understand the information presented, regardless of their familiarity with the system.
                 These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
                 commuting experience.</p>
-                
+
               <p style="text-align: left;">For the LCD screens on the TEL trains, I have redesigneed it to look exactly
                 like the other counterparts on the NSL, EWL, NEL and CCL.</p>
             </div>
@@ -209,20 +209,15 @@
                 <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
                   <img src="img/lcd2-light.png" id="lcd2-img" class="img-fluid" alt="lcd2">
                 </a>
-
+                <hr>
               </div>
-
-              <hr>
             </div>
           </div>
-
-
-
         </div>
       </div>
     </div>
-    </div>
   </section>
+
 
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
     <div class="wbnrfz_details_body_tchp">
@@ -273,14 +268,11 @@
                 <img src="img/wfs2-dark.png" id="wfs2-img" class="img-fluid" alt="wfs2">
               </a>
               <hr>
+
             </div>
           </div>
-
-
-
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -365,7 +357,8 @@
 
   <script src="../js/default-assets/active.js"></script>
 
-  <script src="../js/preloader.js"></script>
+  <script src="../js/scroll.js"></script>
+
 
 </body>
 
