--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -46,7 +46,6 @@
     <div id="scroll-indicator"></div>
   </div>
 
-
   <header>
     <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
@@ -68,7 +67,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-3-light.png); height: 100vh;">
+    style="background-image: url(img/cover-eicw-4.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -106,11 +105,14 @@
             <a href="eicw-2.html">
               <button class="btn">Let's get more experimental!</button>
             </a>
-            <a href="#">
+            <a href="eicw-3.html">
               <button class="btn">Showcasing my own ideas.</button>
             </a>
             <a href="eicw-4.html">
               <button class="btn">CCL6 and the way forward.</button>
+            </a>
+            <a href="#">
+              <button class="btn">The Buses' side of things needs love too!</button>
             </a>
           </div>
         </div>
@@ -128,8 +130,7 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Showcasing
-                    my own ideas</h2>
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">The Buses' side of things needs love too!</h2>
                   <p style="text-align: left;">This section is dedicated specially to display my ideas & concepts on how
                     I envision the current Wayfinding systems can be applied. It's ok to be ambitious here. The sky is
                     the limit! <i>More ideas will be uploaded as soon as it's ready! Stay tuned!</i></p>
@@ -307,6 +308,37 @@
   </section>
 
 
+  <!-- Author -->
+  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
+    <div class="wbnrfz_details_body wow fadeInUp" data-wow-delay="100ms">
+      <div class="container container-xxl container-mobile">
+        <div class="details_info">
+          <div class="row justify-content-center">
+            <div class="col-lg-12">
+              <div class="info justify-content-center">
+                <!-- Author -->
+                <div class="about-author d-flex p-4">
+                  <div class="bio mr-0 text-center">
+                    <img src="../img/bg-img/about.png" alt="profile" class="img-blog-profile img-fluid mb-4">
+                  </div>
+                  <div class="desc">
+                    <h3 style="font-size: 30px; font-weight: bold;">Nurafian Zulkifli</h3>
+                    <p class="text-left">Passionate about Technology and Designs - mainly UI Designs, Wayfinding and
+                      Signage Designs.<br><br> I also
+                      enjoy replicating stuffs that interests me.</p>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+  </section>
+
   <footer class="footer-area">
     <div class="container">
       <div class="footer-content d-flex flex-column align-items-center text-center">
@@ -332,7 +364,7 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-  <script src="js/eicw-3.js"></script>
+  <script src="js/eicw-4.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
@@ -343,8 +375,6 @@
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
-
-  <script src="../js/scroll.js"></script>
 
   <script src="../js/preloader.js"></script>
 
